code block fix
fixed scrollbar in .content > code block

--- a/themes/faded/src/bulma/mystyles.sass
+++ b/themes/faded/src/bulma/mystyles.sass
@@ -53,3 +53,7 @@ a
 
 .profile-padding
   padding: 0 3rem
+
+.content
+  pre
+    padding: .5em .5em 0
