--- a/themes/faded/static/css/main.css
+++ b/themes/faded/static/css/main.css
@@ -7499,4 +7499,7 @@ a span {
 .profile-padding {
   padding: 0 3rem; }
 
+.content pre {
+  padding: 0.5em 0.5em 0; }
+
 /*# sourceMappingURL=main.css.map */
